added a package test added .toList() without Collectors.toList() added count -> count == maxCount